Se agregaron las preguntas que faltaban

--- a/preguntas.html
+++ b/preguntas.html
@@ -959,153 +959,195 @@
         <p class="aws">c. Cambio</p>
         <p class="aws right">d. Control total</p>
     </div>
-    <!--Se cayo el aula virtual, sigue el test 2 del tema 9-->
     <div class="wrapper">
-        <p class="qtn"></p>
-        <p class="aws">a. </p>
-        <p class="aws">b. </p>
-        <p class="aws">c. </p>
-        <p class="aws">d. </p>
+        <p class="qtn">Si queremos saber todos las direcciones IP intermedias que pasa un paquete de origen a destino, utilizamos...</p>
+        <p class="aws">a. ping</p>
+        <p class="aws right">b. tracert</p>
+        <p class="aws">c. netstat</p>
+        <p class="aws">d. route</p>
     </div>
     <div class="wrapper">
-        <p class="qtn"></p>
-        <p class="aws">a. </p>
-        <p class="aws">b. </p>
-        <p class="aws">c. </p>
-        <p class="aws">d. </p>
+        <p class="qtn">En un equipo llamado pc1 tenemos una carpeta compartida al usuario juan.  ¿Cuál es su ruta UNC?</p>
+        <p class="aws">a. \\pc1\nombre_carpeta</p>
+        <p class="aws right">b. \\pc1\nombre_recurso</p>
+        <p class="aws">c. \\juan\nombre_recurso</p>
+        <p class="aws">d. \\juan\nombre_carpeta</p>
     </div>
     <div class="wrapper">
-        <p class="qtn"></p>
-        <p class="aws">a. </p>
-        <p class="aws">b. </p>
-        <p class="aws">c. </p>
-        <p class="aws">d. </p>
+        <p class="qtn">Para compartir una carpeta de forma secreta, hay que....</p>
+        <p class="aws">a. poner un símbolo de $ al principio del nombre de la carpeta</p>
+        <p class="aws">b. poner un símbolo de $ al final del nombre de la carpeta</p>
+        <p class="aws">c. poner un símbolo de $ al principio del nombre del recurso</p>
+        <p class="aws right">d. poner un símbolo de $ al final del nombre del recurso</p>
     </div>
     <div class="wrapper">
-        <p class="qtn"></p>
-        <p class="aws">a. </p>
-        <p class="aws">b. </p>
-        <p class="aws">c. </p>
-        <p class="aws">d. </p>
+        <p class="qtn">¿A qué puerto está asociado el servicio de FTP?</p>
+        <p class="aws">a. Al 25</p>
+        <p class="aws">b. Al 21 (datos) y 20 (control)</p>
+        <p class="aws">c. Al 23</p>
+        <p class="aws right">d. Al 21 (control) y 20 (datos)</p>
     </div>
     <div class="wrapper">
-        <p class="qtn"></p>
-        <p class="aws">a. </p>
-        <p class="aws">b. </p>
-        <p class="aws">c. </p>
-        <p class="aws">d. </p>
+        <p class="qtn">¿Cuál es falsa al compartir?</p>
+        <p class="aws">a. Se pueden compartir carpetas</p>
+        <p class="aws right">b. Se pueden compartir archivos</p>
+        <p class="aws">c. Se pueden compartir impresoras</p>
+        <p class="aws">d. Si se mueve una carpeta compartida, se deja de compartir</p>
     </div>
     <div class="wrapper">
-        <p class="qtn"></p>
-        <p class="aws">a. </p>
-        <p class="aws">b. </p>
-        <p class="aws">c. </p>
-        <p class="aws">d. </p>
+        <p class="qtn">Supongamos el usuario maria que pertenece a 3 grupos: madrid, sevilla, cuenca. En una carpeta compartida, están configurados los permisos siguientes:    maria lectura,    madrid cambio,    sevilla control total,    cuenca lectura denegada, 
+            <br>¿Qué permisos tiene maria en esa carpeta?</p>
+        <p class="aws right">a. Ningún permiso</p>
+        <p class="aws">b. Lectura</p>
+        <p class="aws">c. Cambio</p>
+        <p class="aws">d. Control total</p>
     </div>
     <div class="wrapper">
-        <p class="qtn"></p>
-        <p class="aws">a. </p>
-        <p class="aws">b. </p>
-        <p class="aws">c. </p>
-        <p class="aws">d. </p>
+        <p class="qtn">¿Cuál de los siguientes programas es un acceso remoto no seguro?</p>
+        <p class="aws">a. SSH</p>
+        <p class="aws right">b. Telnet</p>
+        <p class="aws">c. VNC</p>
+        <p class="aws">d. Escritorio remoto de Windows</p>
     </div>
     <div class="wrapper">
-        <p class="qtn"></p>
-        <p class="aws">a. </p>
-        <p class="aws">b. </p>
-        <p class="aws">c. </p>
-        <p class="aws">d. </p>
+        <p class="qtn">¿Qué comando sirve para averiguar nuestro servidor DNS y devolver la IP de una página web?</p>
+        <p class="aws right">a. nslookup</p>
+        <p class="aws">b. ping</p>
+        <p class="aws">c. route</p>
+        <p class="aws">d. ipconfig</p>
     </div>
     <div class="wrapper">
-        <p class="qtn"></p>
-        <p class="aws">a. </p>
-        <p class="aws">b. </p>
-        <p class="aws">c. </p>
-        <p class="aws">d. </p>
+        <p class="qtn">Al compartir recursos en Windows, uno de los permisos que permite “Control total” pero que no permite “Cambio” es:</p>
+        <p class="aws">a. Ejecutar un archivo</p>
+        <p class="aws right">b. Tomar posesión</p>
+        <p class="aws">c. Agregar archivos y subcarpetas</p>
+        <p class="aws">d. Eliminar subcarpetas y archivos</p>
     </div>
     <div class="wrapper">
-        <p class="qtn"></p>
-        <p class="aws">a. </p>
-        <p class="aws">b. </p>
-        <p class="aws">c. </p>
-        <p class="aws">d. </p>
+        <p class="qtn">Indica el servicio que permite configurar el equipo como router para permitir las comunicaciones entre varias redes.</p>
+        <p class="aws">a. El servicio DHCP</p>
+        <p class="aws right">b. El cortafuegos iptables</p>
+        <p class="aws">c. El servicio DNS</p>
+        <p class="aws">d. El servicio ROUTE</p>
     </div>
     <div class="wrapper">
-        <p class="qtn"></p>
-        <p class="aws">a. </p>
-        <p class="aws">b. </p>
-        <p class="aws">c. </p>
-        <p class="aws">d. </p>
+        <p class="qtn">¿Qué comando permite activar la red?</p>
+        <p class="aws">a. ipconfig eth0 up</p>
+        <p class="aws right">b. service networking start</p>
+        <p class="aws">c. service enp0s3 up</p>
+        <p class="aws">d. ifconfig network start</p>
     </div>
     <div class="wrapper">
-        <p class="qtn"></p>
-        <p class="aws">a. </p>
-        <p class="aws">b. </p>
-        <p class="aws">c. </p>
-        <p class="aws">d. </p>
+        <p class="qtn">¿Qué fichero almacena los servidores DNS que utiliza el equipo?</p>
+        <p class="aws">a. /etc/hostname</p>
+        <p class="aws">b. /etc/dns.conf</p>
+        <p class="aws">c. /etc/sysconfig/network.conf</p>
+        <p class="aws right">d. /etc/resolv.conf</p>
     </div>
     <div class="wrapper">
-        <p class="qtn"></p>
-        <p class="aws">a. </p>
-        <p class="aws">b. </p>
-        <p class="aws">c. </p>
-        <p class="aws">d. </p>
+        <p class="qtn">¿Cuál es falsa sobre Samba?</p>
+        <p class="aws">a. Samba permite compartir recursos entre máquinas Windows y Linux</p>
+        <p class="aws">b. El fichero de configuración es /etc/samba/smb.conf</p>
+        <p class="aws right">c. Utiliza 2 puertos</p>
+        <p class="aws">d. Para montar un recurso se utiliza la opción cifs en el comando mount</p>
     </div>
     <div class="wrapper">
-        <p class="qtn"></p>
-        <p class="aws">a. </p>
-        <p class="aws">b. </p>
-        <p class="aws">c. </p>
-        <p class="aws">d. </p>
+        <p class="qtn">¿Cuál de las siguientes opciones no pertenece al comando service?</p>
+        <p class="aws">a. start</p>
+        <p class="aws">b. stop</p>
+        <p class="aws right">c. reboot</p>
+        <p class="aws">d. status</p>
     </div>
     <div class="wrapper">
-        <p class="qtn"></p>
-        <p class="aws">a. </p>
-        <p class="aws">b. </p>
-        <p class="aws">c. </p>
-        <p class="aws">d. </p>
+        <p class="qtn">¿Cuál es el archivo de configuración de las tarjetas de red en Ubuntu?</p>
+        <p class="aws right">a. /etc/network/interfaces</p>
+        <p class="aws">b. /etc/networking/enp0s3</p>
+        <p class="aws">c. /var/network/enp0s3</p>
+        <p class="aws">d. /www/network/interfaces</p>
     </div>
     <div class="wrapper">
-        <p class="qtn"></p>
-        <p class="aws">a. </p>
-        <p class="aws">b. </p>
-        <p class="aws">c. </p>
-        <p class="aws">d. </p>
+        <p class="qtn">En samba ¿qué comando permite añadir el usuario luis?</p>
+        <p class="aws right">a. smbpasswd -a luis</p>
+        <p class="aws">b. adduser luis</p>
+        <p class="aws">c. passwd luis</p>
+        <p class="aws">d. smbadduser luis</p>
     </div>
     <div class="wrapper">
-        <p class="qtn"></p>
-        <p class="aws">a. </p>
-        <p class="aws">b. </p>
-        <p class="aws">c. </p>
-        <p class="aws">d. </p>
+        <p class="qtn">¿Qué servicio permite conectarse a un servidor de forma remota?</p>
+        <p class="aws">a. Telnet</p>
+        <p class="aws">b. Open SSH</p>
+        <p class="aws">c. VNC</p>
+        <p class="aws right">d. Todas son verdaderas</p>
     </div>
     <div class="wrapper">
-        <p class="qtn"></p>
-        <p class="aws">a. </p>
-        <p class="aws">b. </p>
-        <p class="aws">c. </p>
-        <p class="aws">d. </p>
+        <p class="qtn">Indica el fichero donde se guardan entradas de equipos/IP de forma manual.</p>
+        <p class="aws">a. /etc/hostname</p>
+        <p class="aws right">b. /etc/hosts</p>
+        <p class="aws">c. /etc/sysconfig/network</p>
+        <p class="aws">d. /etc/resolv.conf</p>
     </div>
     <div class="wrapper">
-        <p class="qtn"></p>
-        <p class="aws">a. </p>
-        <p class="aws">b. </p>
-        <p class="aws">c. </p>
-        <p class="aws">d. </p>
+        <p class="qtn">Indica la opción incorrecta</p>
+        <p class="aws">a. El servicio http utiliza el puerto 80</p>
+        <p class="aws">b. El servicio ftp utiliza el puerto 21</p>
+        <p class="aws right">c. El servicio ssh utiliza el puerto 23</p>
+        <p class="aws">d. El servicio https utiliza el puerto 443</p>
     </div>
     <div class="wrapper">
-        <p class="qtn"></p>
-        <p class="aws">a. </p>
-        <p class="aws">b. </p>
-        <p class="aws">c. </p>
-        <p class="aws">d. </p>
+        <p class="qtn">¿Cuál es falsa sobre Open ssh?</p>
+        <p class="aws right">a. Incorpora acceso remoto gráfico</p>
+        <p class="aws">b. Utiliza el puerto 22</p>
+        <p class="aws">c. Incorpora ftp seguro</p>
+        <p class="aws">d. El archivo de configuración es /etc/ssh/sshd_config</p>
     </div>
     <div class="wrapper">
-        <p class="qtn"></p>
-        <p class="aws">a. </p>
-        <p class="aws">b. </p>
-        <p class="aws">c. </p>
-        <p class="aws">d. </p>
+        <p class="qtn">¿Es posible la transmisión de ficheros por FTP mediante el protocolo SSH?</p>
+        <p class="aws right">a. Si, y además es FTP seguro (SFTP)</p>
+        <p class="aws">b. No, porque son servicios diferentes</p>
+        <p class="aws">c. Si, ofrece FTP estándar</p>
+        <p class="aws">d. No, SSH y FTP no con compatibles porque SSH se cifra con 128 bits</p>
+    </div>
+    <div class="wrapper">
+        <p class="qtn">¿Qué comando permite instalar el servidor FTP en Ubuntu?</p>
+        <p class="aws right">a. apt install vsftpd</p>
+        <p class="aws">b. apt install ftp</p>
+        <p class="aws">c. apt install ftpd</p>
+        <p class="aws">d. yum install ftp</p>
+    </div>
+    <div class="wrapper">
+        <p class="qtn">Para compartir un directorio mediante NFS, ¿qué fichero necesita modificar?</p>
+        <p class="aws">a. /etc/nfs/nfs.conf</p>
+        <p class="aws">b. /etc/nfs/nfs-config</p>
+        <p class="aws right">c. /etc/exports</p>
+        <p class="aws">d. /var/exports</p>
+    </div>
+    <div class="wrapper">
+        <p class="qtn">¿Para qué se utiliza el servicio VNC?</p>
+        <p class="aws">a. Porque es el único servicio que permite conexiones seguras</p>
+        <p class="aws">b. Para crear redes privadas virtuales</p>
+        <p class="aws right">c. Para acceder de forma remota a equipos mediante la consola gráfica</p>
+        <p class="aws">d. Para acceder de forma remota a equipos mediante terminal</p>
+    </div>
+    <div class="wrapper">
+        <p class="qtn">Indica el fichero donde se guarda el nombre del equipo.</p>
+        <p class="aws right">a. /etc/hostname</p>
+        <p class="aws">b. /etc/hosts</p>
+        <p class="aws">c. /etc/sysconfig/network</p>
+        <p class="aws">d. /etc/resolv.conf</p>
+    </div>
+    <div class="wrapper">
+        <p class="qtn">En Apache ¿en qué directorio se alojan por defecto las páginas web?</p>
+        <p class="aws right">a. /var/www/html</p>
+        <p class="aws">b. /www/apache2</p>
+        <p class="aws">c. /var/html</p>
+        <p class="aws">d. /etc/www/html</p>
+    </div>
+    <div class="wrapper">
+        <p class="qtn">¿Si queremos conocer por los equipos que pasamos para llegar a cualquier dirección, en Linux utilizamos?</p>
+        <p class="aws">a. tracert</p>
+        <p class="aws right">b. traceroute</p>
+        <p class="aws">c. ifconfig</p>
+        <p class="aws">d. nolookup</p>
     </div>
     <div class="wrapper">
         <p class="qtn"></p>
