Se agrego funcionalidad a la pagina con javasrispt, y se agrego el boton reset

--- a/preguntas.html
+++ b/preguntas.html
@@ -1150,5 +1150,6 @@
         <p class="aws">c. ifconfig</p>
         <p class="aws">d. nolookup</p>
     </div>
+    <button class="btn">Reset</button>
 </body>
 </html>
