Se agrego un contador de aciertos

--- a/preguntas.html
+++ b/preguntas.html
@@ -1150,7 +1150,12 @@
             <p class="aws">c. ifconfig</p>
             <p class="aws">d. nolookup</p>
         </div>
+        <div class="result">
+            <p>Respuestas correctas</p>
+            <p><span class="score">0</span>/<span class="total">160</span></p>
+        </div>
         <button class="btn">Reset</button>
     </div>
+
 </body>
 </html>
