--- a/preguntas.html
+++ b/preguntas.html
@@ -591,18 +591,18 @@
             <p class="aws">d. -20</p>
         </div>
         <div class="wrapper">
-            <p class="qtn">Si solo queremos mostrar las particiones del tercer disco, ejecutamos:</p>
-            <p class="aws" data-right>a. fdisk -l /dev/sdc</p>
-            <p class="aws">b. fdisk /dev/sdc</p>
-            <p class="aws">c. fdisk -l /dev/sd3</p>
-            <p class="aws">d. fdisk /dev/sd3</p>
+            <p class="qtn">Indica las correctas. Un disco con MBR, puede…</p>
+            <p class="aws" data-right>a. tener 1 partición primaria, 1extendida y 3 lógicas</p>
+            <p class="aws">b. tener 4 particiones primarias, 1 extendida y 2 lógicas</p>
+            <p class="aws">c. tener 2 particiones activas (por ejemplo, cuando hay 2 sistemas instalados)</p>
+            <p class="aws">d. tener como activa una partición lógica</p>
         </div>
         <div class="wrapper">
-            <p class="qtn">¿Qué ocurre si un usuario tiene el identificador de grupo (GID) y usuario (UID) a cero? Ejemplo 0:0</p>
-            <p class="aws">a. Es imposible que esté a cero el UID</p>
-            <p class="aws" data-right>b. Que es el usuario root</p>
-            <p class="aws">c. Que es el primer usuario del grupo llamado '0'</p>
-            <p class="aws">d. Es imposible que esté a cero el GID</p>
+            <p class="qtn">Para cambiar del directorio $HOME de juan, al de maria hay que ejecutar:</p>
+            <p class="aws">a. Si se utiliza ruta absoluta:  cd /home/maria</p>
+            <p class="aws" data-right>b. Si se utiliza ruta relativa:  cd ../maria</p>
+            <p class="aws">c. Si se utiliza ruta absoluta:  cd home/maria</p>
+            <p class="aws">d. Si se utiliza ruta relativa:  cd ../../maria</p>
         </div>
         <div class="wrapper">
             <p class="qtn">¿Qué comando podrías utilizar para montar un CD?</p>
@@ -620,18 +620,18 @@
                 sudo:x:27:user,juan</p>
         </div>
         <div class="wrapper">
-            <p class="qtn">¿Qué permiso es necesario para poder copiar un archivo dentro de la misma carpeta?</p>
-            <p class="aws" data-right>a. Permiso de lectura en archivo y permiso de escritura en carpeta</p>
-            <p class="aws">b. Permiso de escritura en archivo y permiso de lectura en carpeta</p>
-            <p class="aws">c. Permiso de escritura en archivo y permiso de escritura en carpeta</p>
-            <p class="aws">d. Permiso de lectura en archivo y permiso de lectura en carpeta</p>
+            <p class="qtn">¿Cuál es falsa al configurar un servidor FTP?</p>
+            <p class="aws" data-right>a. Es necesario configurar en el servidor que software cliente se va a utilizar</p>
+            <p class="aws">b. Se puede permitir el acceso a usuarios anónimos</p>
+            <p class="aws">c. Se puede cambiar el puerto por defecto que es el 21</p>
+            <p class="aws">d. Se puede configurar a unos usuarios "Lectura" y a otros "Lectura y escritura"</p>
         </div>
         <div class="wrapper">
-            <p class="qtn">Para ejecutar un script es necesario...</p>
-            <p class="aws" data-right>a. Poner el permiso de ejecución al script</p>
-            <p class="aws">b. Poner la extension .sh al nombre</p>
-            <p class="aws">c. Al ejecutarlo utilizar ruta absoluta</p>
-            <p class="aws">d. Todas son correctas</p>
+            <p class="qtn">En un equipo llamado pc1 tenemos una carpeta compartida al usuario juan. ¿Cuál es su ruta UNC?</p>
+            <p class="aws" data-right>a. \\pc1\nombre_recurso</p>
+            <p class="aws">b. \\pc1\nombre_carpeta</p>
+            <p class="aws">c. \\juan\nombre_recurso</p>
+            <p class="aws">d. \\juan\nombre_carpeta</p>
         </div>
         <div class="wrapper">
             <p class="qtn">¿Con 4 discos de 2 TB en que caso se consigue un disco de 6 TB?</p>
